[package]
name = "kunxl-os"
version = "0.1.0"
authors = ["Kunal Tiwari <tiwari.25@iitj.ac.in>"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic